Gave back property view

--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -91,6 +91,7 @@
                         if (data != "0") {
                             //window.location.replace("webapp/loginhome.html");
                             console.log("Completed");
+                            listProperties(propertyArray);
                         }
                     }
 
