--- a/webapp/visitorsignup.html
+++ b/webapp/visitorsignup.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
+  <script src="js/md5.min.js"></script>
   <script> 
   // let payload = {
   //  "email": "test2@harvard.edu",
@@ -23,10 +24,20 @@
   //  "items" : [["Pig"], ["Peruvian Lily"]]
   // }
       function insertUser() {
+          if (document.getElementById("password").value != document.getElementById("confirm_password").value) {
+              window.alert("passwords don't match fool");
+              return;
+          }
+
+          if (document.getElementById("password").value.length < 8) {
+              window.alert("password needs to be 8 characters");
+              return;
+          }
+
           let payload = {
             "email": document.getElementById("email").value,
             "username": document.getElementById("username").value,
-            "password": document.getElementById("password").value,
+            "password": md5(document.getElementById("password").value),
             "type" : "Visitor",
             "property": "Test Garden",
             "address": "555 Test Road",
@@ -96,7 +107,8 @@
             <div class="form-group">
               <input id="email" type="email" class="form-control"placeholder="*Enter email"> </div>
             <div class="form-group">
-              <input id="password" type="password" class="form-control" placeholder="*New password"> </div>
+              <input id="password" type="password" class="form-control" placeholder="*New password"> 
+              <input id="confirm_password" type="password" class="form-control" placeholder="*Confirm password"> </div>
             <button type="submit" class="btn btn-primary" onclick="insertUser()">Create Account</button>
             <button type="reset" class="btn btn-primary" onclick="clean()">Clear </button>
           
