--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
         <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css">
         <script src="webapp/js/md5.min.js"></script>
+        <script src="webapp/js/Cookies.js"></script>
         <script>
 
             function checkLogin() {
@@ -19,7 +20,6 @@
                     "password": pass
                 }
 
-                console.log(payload);
 
                 var xhr = new XMLHttpRequest();
                     xhr.onload = () => {
@@ -27,8 +27,8 @@
                         console.log("This is data" + data);
 
                         if (data != "0") {
-                            document.cookie = "type=" + data + "; expires=Thu, 26 Apr 2018 12:00:00 UTC;";
-                            document.cookie = "email=" + email + "; expires=Thu, 26 Apr 2018 12:00:00 UTC;";
+                            Cookies.set("type", data);
+                            Cookies.set("email", email);
 
                             window.location.replace("webapp/loginhome.html");
                             console.log("Next page");
