--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
-  <script src="webapp/js/Cookies.js"></script>
+  <script src="js/Cookies.js"></script>
   <script>
       function listProperties(propertyArray) {
   
