Add deleting an item to manage prop pages

--- a/login.html
+++ b/login.html
@@ -20,6 +20,8 @@
                     "password": pass
                 }
 
+                console.log(payload);
+
 
                 var xhr = new XMLHttpRequest();
                     xhr.onload = () => {
