--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -36,12 +36,14 @@
         </pingendo>
         <div>
             <div class="py-2" href="login.html"> 
-                <a class="btn ml-2 text-white btn-secondary">View Visitors List</a> 
-                <a class="btn ml-2 text-white btn-secondary">View Owners List</a>                  
+                <button class="btn-secondary ml-2 text-white btn">View Visitors List</button>
+                <button class="btn-secondary ml-2 text-white btn">View Owners List</button>                                  
             </div>
         </div>
         <div class="py-2">
-            <button class="btn btn-secondary ml-2 text-white">View Confirmed Properties</button>
+            <a href="">
+                <button class="btn btn-secondary ml-2 text-white">View Confirmed Properties</button>
+            </a>
             <button class="btn btn-secondary ml-2 text-white">View Unconfirmed Properties</button>
         </div>
         <div class="py-2">
