--- a/webapp/addNewProperty.html
+++ b/webapp/addNewProperty.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
 
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
+  <script src="js/Cookies.js"></script>
   <script>
       function addToDB() {
+          console.log("Cookies" + document.cookie);
+          var email = Cookies.get("email");
+          
           items = [document.getElementById("crop_dropdown").value] 
 
           if (document.getElementById("type_dropdown").value == "Farm") {
@@ -17,7 +21,7 @@
 
           let payload = {
             "what" : "addProp",
-            "email": "farmerJoe@gmail.com",
+            "email": email,
             "property": document.getElementById("name").value,
             "address": document.getElementById("address").value,
             "city": document.getElementById("city").value,
@@ -150,6 +154,7 @@
   //  type = "animal" OR "crop"
   //  confirmed = 1 OR 0
   //}
+
 
           getAnimals();
           getCrops();
