--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -489,7 +489,7 @@
                   <button  class="btn btn-primary" onclick="deleteProperty()">Delete Property</button>
                 </div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary" onclick="clean()">Cancel </button>
+                  <button type="reset" class="btn btn-primary"><a href = "loginhome.html">Cancel</a> </button>
                 </div>
               </div>
               <br>
