--- a/webapp/addNewProperty.html
+++ b/webapp/addNewProperty.html
@@ -43,7 +43,7 @@
                     //propertyArray = JSON.parse(data);
 
                     if (data != "0") {
-                            //window.location.replace("webapp/loginhome.html");
+                        window.location.replace("loginhome.html");
                         console.log("Completed");
                     }
                 }
