--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -305,6 +305,8 @@
 
                         property_info = JSON.parse(data);
 
+                        console.log("property info" + property_info);
+
                         if (data != "0") {
                             //window.location.replace("webapp/loginhome.html");
                             displayEditable(property_info[0]);
