--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
                         <a href="ownersignup.html" class="text-white">New Owner Registration</a>
                     </button>
                 </a>
-                <button type="submit" class="btn btn-primary ml-3 text-white" onclick="storeinfo()">
+                <button type="submit" class="btn btn-primary ml-3 text-white">
                     <a href="visitorsignup.html" class="text-white">New Visitor Registration</a>
                 </button>
                 <a href="">  </a>
