--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                             Cookies.set("type", data);
                             Cookies.set("email", email);
 
-                            window.location.replace("webapp/adminhome.html");
+                            window.location.replace("admin/adminhome.html");
                             console.log("Next page");
                         }
                         else if (data != "0" && data == "Visitor") {
