--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -273,7 +273,7 @@
       function getProperties(email, ownerType) {
             let payload = {
                 "email": email,
-                "type": ownerType
+                "type": "public"
             }
 
             var propertyArray;
@@ -390,7 +390,7 @@
   <div class="py-5">
     <div class="container">
       <div>
-        <div style="font-size: 50px"> Welcome Back! User </div>
+        <div style="font-size: 50px"> Welcome Back! Visitor </div>
         <br>
         <br>
         <div class="row">
