--- a/login.html
+++ b/login.html
@@ -100,11 +100,11 @@
                 <a href="visitorsignup.html"> </a>
                 <a href="">
                     <button type="submit" class="btn btn-primary" onclick="storeinfo()">
-                        <a href="ownersignup.html" class="text-white">New Owner Registration</a>
+                        <a href="webapp/ownersignup.html" class="text-white">New Owner Registration</a>
                     </button>
                 </a>
                 <button type="submit" class="btn btn-primary ml-3 text-white">
-                    <a href="visitorsignup.html" class="text-white">New Visitor Registration</a>
+                    <a href="webapp/visitorsignup.html" class="text-white">New Visitor Registration</a>
                 </button>
                 <a href="">  </a>
             </div>
