--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                             Cookies.set("type", data);
                             Cookies.set("email", email);
 
-                            window.location.replace("webapp/visitorloginhome.html");
+                            window.location.replace("webapp/visitorhome.html");
                             console.log("Next page");
 
                         }
