--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -249,7 +249,7 @@
                                        
                          var cell = document.createElement("td");    
                          var link = document.createElement("a");
-                        var cellText = document.createTextNode("Manage"); 
+                        var cellText = document.createTextNode("View"); 
                         link.appendChild(cellText);
                         link.href = "manageproperty.html?id=" + ID
                         cell.appendChild(link);
