--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -424,6 +424,9 @@
                             console.log("Completed");
                         }
                     }
+                function goBack() {
+                  window.history.back();
+                }    
 
                 xhr.open("POST", "http://localhost:3000/add", true);
                 xhr.setRequestHeader("Content-Type", 'application/json');
@@ -542,7 +545,7 @@
                   <button  class="btn btn-primary" onclick="deleteProperty()">Delete Property</button>
                 </div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary"><a href = "loginhome.html">Cancel</a> </button>
+                  <button type="reset" class="btn btn-primary"><a href = "loginhome.html" onclick="goBack()" >Cancel</a> </button>
                 </div>
               </div>
              
