--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -20,13 +20,13 @@
 
             function changeWindowConProperties(){
                 console.log("Replacing Window")
-                window.location.replace("confirmedproperties.html");
+                window.location.replace("confirmedProp.html");
 
             }
 
             function changeWindowUnProperties(){
                 console.log("Replacing Window")
-                window.location.replace("unconfirmedproperties.html");
+                window.location.replace("unconfirmedProp.html");
 
             }
 
@@ -41,7 +41,6 @@
                 window.location.replace("pendingcrops.html");
 
             }
-
 
 
 
