--- a/webapp/viewotherprop.html
+++ b/webapp/viewotherprop.html
@@ -214,7 +214,7 @@
 
                         var cell = document.createElement("td");    
                          var link = document.createElement("a");
-                        var cellText = document.createTextNode("Manage"); 
+                        var cellText = document.createTextNode("View"); 
                         link.appendChild(cellText);
                         link.href = "viewProperties.html?id=" + ID
                         cell.appendChild(link);
