--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -52,9 +52,11 @@
                 <a class="navbar-brand" href="#"> <i class="fa d-inline fa-lg fa-cloud"></i> <b>Atlanta Farm Orchard Garden Database</b> </a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
                 <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
-                    <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-                        <a class="btn navbar-btn ml-2 text-white btn-secondary" href="login.html"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
-                    </form>
+                    <div class="py-2">
+                    <button class="btn btn-secondary ml-2 text-white" onclick="changeWindowConProperties()" >
+                         Log Out
+                        </button>
+                    </div>
                 </div>
             </div>
         </nav>
