General fixes for the vistor pages

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                             Cookies.set("email", email);
 
 
-                            window.location.replace("webapp/visitorhome.html");
+                            window.location.replace("webapp/visitorHome.html");
 
                             console.log("Next page");
 
